[gd_scene load_steps=6 format=3 uid="uid://b052torqpsshi"]

[ext_resource type="Script" path="res://scripts/pass_menu.gd" id="1_lebm6"]
[ext_resource type="Theme" uid="uid://bh1i173ctldqs" path="res://scenes/themes/pass_menu.tres" id="2_x4w26"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_18x7r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n4efi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qyxgj"]

[node name="Pass_Menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_lebm6")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.301961)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 6

[node name="next_fase" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("2_x4w26")
text = "next level"

[node name="touch_next_fase" type="TouchScreenButton" parent="VBoxContainer/next_fase"]
position = Vector2(83, 13.5)
scale = Vector2(6.45832, -1.04822)
shape = SubResource("RectangleShape2D_18x7r")
passby_press = true

[node name="quit_game" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("2_x4w26")
text = "quit game"

[node name="touch_quit_game" type="TouchScreenButton" parent="VBoxContainer/quit_game"]
position = Vector2(90, 12.5)
scale = Vector2(7.55385, -0.7677)
shape = SubResource("RectangleShape2D_n4efi")
action = "quit_game"

[node name="reload" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("2_x4w26")
text = "reload level"

[node name="touch_reload" type="TouchScreenButton" parent="VBoxContainer/reload"]
position = Vector2(88, 12.5)
scale = Vector2(6.82353, 0.817709)
shape = SubResource("RectangleShape2D_qyxgj")
action = "reaload_level"

[connection signal="pressed" from="VBoxContainer/next_fase/touch_next_fase" to="." method="_on_touch_next_fase_pressed"]
[connection signal="pressed" from="VBoxContainer/quit_game/touch_quit_game" to="." method="_on_touch_quit_game_pressed"]
[connection signal="pressed" from="VBoxContainer/reload/touch_reload" to="." method="_on_touch_reload_pressed"]
